feat: Inversion of control and tests are done