@@ -1,30 +1,32 @@
-/*
 package com.francopaiz.financialManagementAPI.expense;
 
 import com.francopaiz.financialManagementAPI.model.Expense;
-import com.francopaiz.financialManagementAPI.model.Category;
 import com.francopaiz.financialManagementAPI.model.User;
 import com.francopaiz.financialManagementAPI.repository.expense.ExpenseRepository;
 import com.francopaiz.financialManagementAPI.repository.usuario.UserRepository;
 import com.francopaiz.financialManagementAPI.service.expense.ExpenseServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-class ExpenseServiceImplTest {
+@ExtendWith(MockitoExtension.class)
+public class ExpenseServiceImplTest {
 
     @Mock
     private ExpenseRepository expenseRepository;
@@ -32,144 +34,96 @@ class ExpenseServiceImplTest {
     @Mock
     private UserRepository userRepository;
 
+    @Mock
+    private Authentication authentication;
+
+    @Mock
+    private SecurityContext securityContext;
+
     @InjectMocks
     private ExpenseServiceImpl expenseService;
 
-    private Expense expense;
-    private User user;
-    private Category category;
+    private User authenticatedUser;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        authenticatedUser = new User();
+        authenticatedUser.setId("1");
+        authenticatedUser.setName("Test User");
+        authenticatedUser.setUsername("testuser"); // Agregar si es necesario para el test
+        authenticatedUser.setEmail("testuser@example.com"); // Agregar si es necesario para el test
 
-        // Crear un usuario de prueba
-        user = new User("John Doe", "john@example.com", "password", "1234567890");
-        user.setId("1");
+/*
+        when(securityContext.getAuthentication()).thenReturn(authentication);
 
-        // Crear una categoría de prueba
-        category = new Category("Food");
-        category.setId("2");
+*/
 
-        // Crear un gasto de prueba utilizando el constructor actualizado
-        expense = new Expense("Dinner", BigDecimal.valueOf(50.0), LocalDate.now(), category, user);
-        expense.setId("1");
 
-        // Configurar el contexto de seguridad
-        Authentication authentication = mock(Authentication.class);
-        when(authentication.getPrincipal()).thenReturn("1");
-        SecurityContextHolder.getContext().setAuthentication(authentication);
+        SecurityContextHolder.setContext(securityContext);
+/*
+        when(authentication.getPrincipal()).thenReturn(authenticatedUser);
+*/
+
+        // Asignar valor de prueba para 'profile'
+        ReflectionTestUtils.setField(expenseService, "profile", "postgres");
     }
 
     @Test
-    void testFindAll() {
-        when(expenseRepository.findAll()).thenReturn(Arrays.asList(expense));
+    public void testGetExpenses() {
+        Expense expense1 = new Expense();
+        Expense expense2 = new Expense();
+        when(expenseRepository.getExpenses()).thenReturn(List.of(expense1, expense2));
 
-        List<Expense> expenses = expenseService.findAll();
+        List<Expense> expenses = expenseService.getExpenses();
 
-        assertNotNull(expenses);
-        assertEquals(1, expenses.size());
-        assertEquals(BigDecimal.valueOf(50.0), expenses.get(0).getAmount());
-        verify(expenseRepository, times(1)).findAll();
+        assertEquals(2, expenses.size());
+        verify(expenseRepository, times(1)).getExpenses();
     }
 
     @Test
-    void testFindById() {
-        when(expenseRepository.findById("1")).thenReturn(Optional.of(expense));
+    public void testFindExpenseById() {
+        Expense expense = new Expense();
+        expense.setId("123");
+        when(expenseRepository.findExpenseById("123")).thenReturn(Optional.of(expense));
 
-        Expense foundExpense = expenseService.findById("1");
+        Expense foundExpense = expenseService.findExpenseById("123");
 
         assertNotNull(foundExpense);
-        assertEquals(BigDecimal.valueOf(50.0), foundExpense.getAmount());
-        verify(expenseRepository, times(1)).findById("1");
+        assertEquals("123", foundExpense.getId());
+        verify(expenseRepository, times(1)).findExpenseById("123");
+    }
+
+
+    @Test
+    public void testUpdateExpense() {
+        Expense existingExpense = new Expense();
+        existingExpense.setId("123");
+        existingExpense.setDescription("Descripción antigua");
+        existingExpense.setAmount(BigDecimal.valueOf(50.0));
+
+        when(expenseRepository.findExpenseById("123")).thenReturn(Optional.of(existingExpense));
+        Expense updatedExpense = new Expense();
+        updatedExpense.setDescription("Descripción actualizada");
+        updatedExpense.setAmount(BigDecimal.valueOf(75.0));
+
+        when(expenseRepository.updateExpense(existingExpense)).thenReturn(existingExpense); // Añadido para evitar NullPointerException
+
+        Expense result = expenseService.updateExpense("123", updatedExpense);
+
+        assertEquals("Descripción actualizada", result.getDescription());
+        assertEquals(BigDecimal.valueOf(75.0), result.getAmount());
+        verify(expenseRepository, times(1)).updateExpense(existingExpense);
     }
 
     @Test
-    void testFindByIdNotFound() {
-        when(expenseRepository.findById("1")).thenReturn(Optional.empty());
+    public void testDeleteExpense() {
+        String expenseId = "123";
+        doNothing().when(expenseRepository).deleteExpense(expenseId);
 
-        Expense foundExpense = expenseService.findById("1");
+        expenseService.deleteExpense(expenseId);
 
-        assertNull(foundExpense);
-        verify(expenseRepository, times(1)).findById("1");
+        verify(expenseRepository, times(1)).deleteExpense(expenseId);
     }
 
-    @Test
-    void testSave() {
-        when(userRepository.findById("1")).thenReturn(Optional.of(user));
-        when(expenseRepository.save(any(Expense.class))).thenReturn(expense);
 
-        Expense savedExpense = expenseService.save(expense);
-
-        assertNotNull(savedExpense);
-        assertEquals(BigDecimal.valueOf(50.0), savedExpense.getAmount());
-        assertEquals(user, savedExpense.getUser());
-        assertEquals(category, savedExpense.getCategory());
-        verify(expenseRepository, times(1)).save(any(Expense.class));
-    }
-
-    @Test
-    void testUpdate() {
-        Expense updatedExpense = new Expense("Grocery", BigDecimal.valueOf(70.0), LocalDate.now(), category, user);
-
-        when(expenseRepository.findById("1")).thenReturn(Optional.of(expense));
-        when(expenseRepository.save(any(Expense.class))).thenReturn(updatedExpense);
-
-        Expense result = expenseService.update("1", updatedExpense);
-
-        assertNotNull(result);
-        assertEquals(BigDecimal.valueOf(70.0), result.getAmount());
-        assertEquals("Grocery", result.getDescription());
-        assertEquals(category, result.getCategory());
-        verify(expenseRepository, times(1)).findById("1");
-        verify(expenseRepository, times(1)).save(any(Expense.class));
-    }
-
-    @Test
-    void testUpdateExpenseNotFound() {
-        Expense updatedExpense = new Expense("Grocery", BigDecimal.valueOf(70.0), LocalDate.now(), category, user);
-
-        when(expenseRepository.findById("1")).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            expenseService.update("1", updatedExpense);
-        });
-
-        assertEquals("Gasto no encontrado", exception.getMessage());
-        verify(expenseRepository, times(1)).findById("1");
-    }
-
-    @Test
-    void testDeleteById() {
-        doNothing().when(expenseRepository).deleteById("1");
-
-        expenseService.deleteById("1");
-
-        verify(expenseRepository, times(1)).deleteById("1");
-    }
-
-    @Test
-    void testFindByUser() {
-        when(expenseRepository.findByUser(user)).thenReturn(Arrays.asList(expense));
-
-        List<Expense> expenses = expenseService.findByUser(user);
-
-        assertNotNull(expenses);
-        assertEquals(1, expenses.size());
-        assertEquals(BigDecimal.valueOf(50.0), expenses.get(0).getAmount());
-        verify(expenseRepository, times(1)).findByUser(user);
-    }
-
-    @Test
-    void testFindIncomesForAuthenticatedUser() {
-        when(userRepository.findById("1")).thenReturn(Optional.of(user));
-        when(expenseRepository.findByUser(user)).thenReturn(Arrays.asList(expense));
-
-        List<Expense> expenses = expenseService.findIncomesForAuthenticatedUser();
-
-        assertNotNull(expenses);
-        assertEquals(1, expenses.size());
-        assertEquals(BigDecimal.valueOf(50.0), expenses.get(0).getAmount());
-        verify(expenseRepository, times(1)).findByUser(user);
-    }
-}*/
+}
